tests/baselines/reference/importAndVariableDeclarationConflict3.errors.txt
error TS-1: Pre-emit (2) and post-emit (4) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
tests/cases/compiler/importAndVariableDeclarationConflict3.ts(5,8): error TS2300: Duplicate identifier 'x'.
tests/cases/compiler/importAndVariableDeclarationConflict3.ts(6,8): error TS2300: Duplicate identifier 'x'.


!!! error TS-1: Pre-emit (2) and post-emit (4) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS2749 tests/cases/compiler/importAndVariableDeclarationConflict3.ts:5:12: 'm.m' refers to a value, but is being used as a type here. Did you mean 'typeof m.m'?
!!! related TS2749 tests/cases/compiler/importAndVariableDeclarationConflict3.ts:6:12: 'm.m' refers to a value, but is being used as a type here. Did you mean 'typeof m.m'?
==== tests/cases/compiler/importAndVariableDeclarationConflict3.ts (2 errors) ====
    module m {
      export var m = '';
    }
    
    import x = m.m;
           ~
!!! error TS2300: Duplicate identifier 'x'.
    import x = m.m;
           ~
!!! error TS2300: Duplicate identifier 'x'.
    